--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<div> HIII</div>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>page</title>
+	<link rel="stylesheet" href="node_modules/materialize-css/bin/materialize.css">
+	<link rel="stylesheet" href="css/animate.css">
+</head>
+<body>
+
+	<script src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="node_modules/underscore/underscore-min.js"></script>
+	<script src="node_modules/materialize-css/bin/materialize.js"></script>
+    <h1 class="animated infinite bounce">Example</h1>
+
+</body>
+</html>
