--- a/index.html
+++ b/index.html
@@ -1,36 +1,69 @@
+ 
 <!doctype html>
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<title>page</title>
-	<link rel="stylesheet" href="node_modules/materialize-css/bin/materialize.css">
-	<link rel="stylesheet" href="css/animate.css">
+        <meta charset="utf-8">
+        <title>page</title>
+        <link rel="stylesheet" href="node_modules/materialize-css/bin/materialize.css">
+        <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
+        <script src="https://fb.me/react-0.13.3.js"></script>
+    <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/underscore/underscore-min.js"></script>
+        <script src="node_modules/materialize-css/bin/materialize.js"></script>
 
-	<script src="node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="node_modules/underscore/underscore-min.js"></script>
-	<script src="node_modules/materialize-css/bin/materialize.js"></script>
+        <div class="container center-align">
+
+                <h1 class="animated fadeInDownBig">New live card</h1>
+
+                <!--enter topic title-->
+                <div class="input-field col s6">
+                        <input type="text" class="validate live-card-name">
+                        <label for="live-card-name">Live card name</label>
 
 
-	<div class="container center-align">
+                </div>
+                <div class="input-field col s6">
+                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                        <label for="textarea1">Add Card Snippet</label>
+                </div>
+                <a class="waves-effect waves-light btn-large">Save Snippet</a>
 
-		<h1 class="animated fadeInDownBig">New topic</h1>
+                <!--single live card page-->
 
-		<!--enter topic title-->
-		<div class="input-field col s6">
-			<input id="last_name" type="text" class="validate">
-			<label for="last_name">Topic name</label>
 
-		</div>
-		<div class="input-field col s6">
-			<textarea id="textarea1" class="materialize-textarea"></textarea>
-			<label for="textarea1">Add Card Snippet</label>
-		</div>
-		<a class="waves-effect waves-light btn-large">Save Snippet</a>
-	</div>
+
+
+
+                <div id="butt"></div>
+                <script type="text/jsx">
+                        var LikeButton = React.createClass({
+        getInitialState: function() {
+            return {liked: false};
+        },
+        handleClick: function(event) {
+            this.setState({liked: !this.state.liked});
+        },
+        render: function() {
+            var text = this.state.liked ? 'like' : 'haven\'t liked';
+            return (
+                <p onClick={this.handleClick}>
+                You {text} this. Click to toggle.
+                </p>
+            );
+        }
+    });
+
+    React.render(
+        <LikeButton />,
+        document.getElementById('butt')
+    );
+                </script>
+        </div>
 
 </body>
 
